--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     </head>
     <body class="bg-secondary">
 
+        <div class="container">
+            <div class="row">
+                <div class="num_container">
+
+
+                </div>
+                <!-- --------- -->
+                <div class="result" id="result">
+
+                </div>
+            </div>
+        </div>
+
 
         <script src="./assets/js/main.js"></script>
         <!-- bootstrap scripts -->
