--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     <body class="bg-secondary">
 
         <div class="container">
-            <div class="row">
-                <div class="num_container">
+            <div
+                class="row col col-12 text-center ">
+                <div
+                    class="num_container d-flex flex-column align-content-center">
 
                 </div>
                 <!-- --------- -->
