--- a/index.html
+++ b/index.html
@@ -4,22 +4,26 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./assets/css/style.css">
-        <!-- bootstrap cdn -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;500;700&display=swap"
+            rel="stylesheet">
         <link
             href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
             rel="stylesheet"
             integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
             crossorigin="anonymous">
+        <link rel="stylesheet" href="./assets/css/style.css">
         <title>Document</title>
     </head>
-    <body class="bg-secondary">
+    <body>
 
-        <div class="container">
+        <div class="container pt-3">
             <div
-                class="row col col-12 text-center ">
+                class="row m-0 text-center ">
                 <div
-                    class="num_container d-flex flex-column align-content-center">
+                    class="num_container d-flex flex-column align-content-center justify-content-center">
 
                 </div>
                 <!-- --------- -->
@@ -29,8 +33,6 @@
             </div>
         </div>
 
-        <script src="./assets/js/main.js"></script>
-        <!-- bootstrap scripts -->
         <script
             src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
             integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
@@ -39,5 +41,7 @@
             src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
             integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
             crossorigin="anonymous"></script>
+        <script src="./assets/js/main.js"></script>
+        <!-- bootstrap scripts -->
     </body>
 </html>
